# vassdrag

./: README.md  hello.py  notebook.py  pyproject.toml
data/magasin/: Vannkraft_Magasin.shx
data/vassdrag/NVEKartdata/NVEData/Vannkraft/: Vannkraft_Magasin.dbf
